# Avilla-Lagrange

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  test_lagrange.py
src/avilla/lagrange/: __init__.py  account.py  capability.py  client.py  collector.py  connection.py  const.py  logger.py  protocol.py  resource.py  service.py  types.py  typing.py
src/avilla/lagrange/collector/: connection.py
src/avilla/lagrange/database/: __init__.py  service.py  table.py  types.py
src/avilla/lagrange/perform/: README.md  __init__.py  base.py  compat.py  context.py  metadata.py
src/avilla/lagrange/perform/action/: message.py
src/avilla/lagrange/perform/compat/: __init__.py  overload.py
src/avilla/lagrange/perform/event/: lifespan.py  message.py
src/avilla/lagrange/perform/message/: deserialize.py  elements.py  serialize.py
src/avilla/lagrange/utils/: broadcast.py  database.py  magic.py  misc.py  record.py
tests/: test_database.py
