[project]
name = "avilla-lagrange"
version = "0.1.0"
description = "Lagrange protocol for Avilla."
authors = [
    {name = "F_Qilin", email = "fzq0003@gmail.com"},
]
dependencies = [
    "avilla-core>=1.0.0a26",
    "lagrange-python>=0.1.1",
    "avilla-standard-qq>=1.0.0a21",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
